--- a/public/index.css
+++ b/public/index.css
@@ -1,8 +1,23 @@
 #body {
-   height: 100%;
-   overflow: hidden;
+  height: 100%;
+  overflow: hidden;
 }
 
-#board1{
-    border-radius: 10px;
+#board1 {
+  width: 700px;
+  border: 9px solid;
+  padding: 0;
+}
+@media (max-width: 500px) {
+  #board1 {
+    width: 100px;
+    border: 9px solid red;
+  }
+}
+
+#non-react {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
